# Data-Generator

./: .gitignore  Cargo.toml  Credits.md  LICENSE  Notes.md  README.md  index.html  neutralino.config.json  package-lock.json  package.json
resources/js/data/biome/: biome.ts  biome_elements.ts
resources/js/data/elements/: biome_element.ts  carver_element.ts  placed_feature_element.ts
resources/js/data/elements/mob_spawning/: spawn_costs_element.ts  spawner_category_element.ts
resources/js/data/framework/: biome_element.ts  data_categories.ts  data_element.ts  data_general.ts  data_property.ts  serializables.ts
resources/js/util/: resource_location_util.ts  version_util.ts
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/data/: datapack.rs  mod.rs  util.rs
src-tauri/src/data/elements/: biome.rs  carver.rs  element.rs  mod.rs
src-tauri/src/io/: json_io.rs  mod.rs
src/data/: biome.rs  carver.rs  datapack.rs  mod.rs  util.rs
src/data/elements/: biome.rs  carver.rs  element.rs  mod.rs
src/gui/: datapack.rs  font.rs  mod.rs  pack_info.rs  theme.rs  widgets.rs  window.rs
